force-app/main/default/objects/Engagement_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Message_Text__c</fullName>
        <description>Use this field to append text onto the bottom of the email.</description>
        <inlineHelpText>Use this field to append text onto the bottom of the email.</inlineHelpText>
        <label>Additional Message Text</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_ID__c</fullName>
        <label>Campaign Member ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Link__c</fullName>
        <label>Campaign Member Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Engagement Contacts</relationshipLabel>
        <relationshipName>Engagement_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Thread_Id__c</fullName>
        <description>Look up to the related Case and pull in the Thread Id for email sending.</description>
        <formula>IF( Case__c = '' ,'', Case__r.Thread_Id__c)</formula>
        <inlineHelpText>Look up to the related Case and pull in the Thread Id for email sending.</inlineHelpText>
        <label>Case Thread Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Engagement Contacts</relationshipLabel>
        <relationshipName>Engagement_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_EMPLID__c</fullName>
        <formula>Contact__r.EMPLID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact EMPLID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Engagement Contacts</relationshipLabel>
        <relationshipName>Engagement_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Engagement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engagement</label>
        <referenceTo>Engagement__c</referenceTo>
        <relationshipLabel>Engagement Contacts</relationshipLabel>
        <relationshipName>Engagement_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Success_Resource_Primary_Email__c</fullName>
        <formula>Success_Resource_Record__r.Primary_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Success Resource Primary Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Resource_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Success Resource Record</label>
        <referenceTo>Success_Resource__c</referenceTo>
        <relationshipLabel>Engagement Contacts</relationshipLabel>
        <relationshipName>Engagement_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>This object stores communication that needs to be made to a contact. Also includes an additional text field to append to their email message.</description>
    <label>Engagement Contact</label>
    <nameField>
        <displayFormat>EC-{0}</displayFormat>
        <label>Engagement Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_with_Details</fullName>
        <columns>NAME</columns>
        <columns>Engagement__c</columns>
        <columns>Status__c</columns>
        <columns>Contact__c</columns>
        <columns>Additional_Message_Text__c</columns>
        <columns>Contact_EMPLID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All with Details</label>
    </listViews>
    <listViews>
        <fullName>Troubleshooting</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Additional_Message_Text__c</columns>
        <columns>Case__c</columns>
        <columns>Case_Thread_Id__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_EMPLID__c</columns>
        <columns>Engagement__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Success_Resource_Primary_Email__c</columns>
        <columns>Success_Resource_Record__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Jessica Jenner</value>
        </filters>
        <label>Troubleshooting</label>
    </listViews>
</CustomObject>