force-app/main/default/objects/Engagement_Contact__c/listViews/All_with_Details.listView-meta.xml
<ListView>
    <fullName>All_with_Details</fullName>
    <columns>NAME</columns>
    <columns>Engagement__c</columns>
    <columns>Status__c</columns>
    <columns>Contact__c</columns>
    <columns>Additional_Message_Text__c</columns>
    <columns>Contact_EMPLID__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All with Details</label>
</ListView>